content visibility fix

--- a/src/Home.css
+++ b/src/Home.css
@@ -15,47 +15,7 @@
     align-items: center;
     margin: 6rem 0 1rem 0;
     gap: 10%;
-    background-color: maroon;
-}
-
-@media (min-width: 601px) {
-    .profile-pic {
-        max-width: 25rem;
-        min-width: 15rem;
-        width: 25%;
-        height: auto;
-        border-radius: 2rem;
-    }
-
-    .mobile-profile-pic {
-        content-visibility: hidden;
-        max-width: 25rem;
-        min-width: 15rem;
-        width: 25%;
-        height: auto;
-        border-radius: 2rem;
-        margin-top: 2rem;
-    }
-}
-
-@media (max-width: 600px) {
-    .profile-pic {
-        content-visibility: hidden;
-        max-width: 25rem;
-        min-width: 15rem;
-        width: 25%;
-        height: auto;
-        border-radius: 2rem;
-    }
-
-    .mobile-profile-pic {
-        max-width: 25rem;
-        min-width: 15rem;
-        width: 25%;
-        height: auto;
-        border-radius: 2rem;
-        margin-top: 2rem;
-    }
+    /* background-color: maroon; */
 }
 
 .title {
@@ -175,4 +135,33 @@
     color: white;
     background-color: #404040;
     cursor: pointer;
+}
+
+@media (min-width: 601px) {
+    .profile-pic {
+        max-width: 25rem;
+        min-width: 15rem;
+        width: 25%;
+        height: auto;
+        border-radius: 2rem;
+    }
+
+    .mobile-profile-pic {
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+    .profile-pic {
+        display: none;
+    }
+
+    .mobile-profile-pic {
+        max-width: 25rem;
+        min-width: 15rem;
+        width: 25%;
+        height: auto;
+        border-radius: 2rem;
+        margin-top: 2rem;
+    }
 }
